Failed to setup Foreign Keys

--- a/home_page.html
+++ b/home_page.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>smile | home</title>
+    <title>Homework Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"/>
@@ -23,7 +23,7 @@
 </nav>
 <div class="container">
     <header>
-        <h1>smile</h1>
+        <h1>Homework</h1>
         <h2>{% block pageheading %}{% endblock %}</h2>
     </header>
 
